--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,11 @@
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
-	
+
 </head>
 
 <body>
-	<app-root class="flex justify-center items-center w-full min-h-screen"></app-root>
+	<app-root class="w-full min-h-screen"></app-root>
 </body>
 
 </html>
