feat: :sparkles: Modal, Main Button Components added and Admin Page updated

--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<title>GrabAndGo</title>
-	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/x-icon" href="favicon.ico">
-	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <meta charset="utf-8">
+    <title>Grab & Go</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="gngico.ico">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
 
 <body>
-	<app-root class="w-full min-h-screen"></app-root>
+    <app-root class="w-full min-h-screen"></app-root>
 </body>
 
 </html>
